@@ -271,7 +271,7 @@ class ExportToCSV(QtCore.QObject):
             out_handler = open(filepath, 'w')
             if add_header:
                 header = \
-                    reduce(lambda x, y: '{0}, {1}'.format(x, y), leaf.colnames)
+                    reduce(lambda x, y: u'{0}, {1}'.format(x, y), leaf.colnames)
                 # Ensure consistency with numpy.savetxt i.e. use \n line breaks
                 out_handler.write(header + '\n')
             chunk_size = 10000
