@@ -178,7 +178,7 @@ def heterogeneousTableInfo(input_handler, first_line, data):
     if has_header:
         descr = {}
         for i in range(0, first_line.size):
-            dtype = data.dtype.fields['f{0}'.format(i)][0]
+            dtype = data.dtype.fields[u'f{0}'.format(i)][0]
             descr[first_line[i]] = tables.Col.from_dtype(dtype, pos=i)
         for i in itemsizes:
             descr[first_line[i]] = tables.StringCol(itemsizes[i], pos=i)
@@ -186,7 +186,7 @@ def heterogeneousTableInfo(input_handler, first_line, data):
         descr = dict([(f, tables.Col.from_dtype(t[0])) for f, t in 
             data.dtype.fields.items()])
         for i in itemsizes:
-            descr['f{0}'.format(i)] = tables.StringCol(itemsizes[i])
+            descr[u'f{0}'.format(i)] = tables.StringCol(itemsizes[i])
 
     return descr, has_header
 
@@ -250,11 +250,11 @@ def homogeneousTableInfo(input_handler, first_line, data):
     else:
         if data.dtype.name.startswith('string'):
             descr = dict(
-                [('f{0}'.format(field), tables.StringCol(itemsize)) \
+                [(u'f{0}'.format(field), tables.StringCol(itemsize)) \
                 for field in indices])
         else:
             descr = dict(
-                [('f{0}'.format(field), tables.Col.from_dtype(data.dtype)) \
+                [(u'f{0}'.format(field), tables.Col.from_dtype(data.dtype)) \
                 for field in indices])
 
     return descr, has_header
@@ -273,7 +273,7 @@ def askForHelp(first_line):
         """ a table header or regular data?""", 'Message box text')
     itext = ''
     try:
-        dtext = reduce(lambda x, y: '{0}, {1}'.format(x, y), first_line)
+        dtext = reduce(lambda x, y: u'{0}, {1}'.format(x, y), first_line)
     except TypeError:
         # If first_line has only one field reduce raises a TypeError
         dtext = first_line.tostring()
@@ -540,7 +540,7 @@ class ImportCSV(QtCore.QObject):
         try:
             dirname, filename = os.path.split(filepath)
             root = os.path.splitext(filename)[0]
-            dest_filepath = os.path.join(dirname, '{0}.h5'.format(root))
+            dest_filepath = os.path.join(dirname, u'{0}.h5'.format(root))
             if isValidFilepath(dest_filepath):
                 dbdoc = self.dbt_model.createDBDoc(dest_filepath)
         except:
@@ -624,9 +624,9 @@ class ImportCSV(QtCore.QObject):
             if dbdoc is None:
                 return
             io_filters = tables.Filters(complevel=9, complib='lzo')
-            dataset_name = "imported_{0}".format(kind)
+            dataset_name = u"imported_{0}".format(kind)
             atitle = \
-                'Source CSV file {0}'.format(os.path.basename(filepath))
+                u'Source CSV file {0}'.format(os.path.basename(filepath))
             dataset = dbdoc.h5file.createTable('/', dataset_name, descr, 
                 title=atitle, filters=io_filters, expectedrows=nrows)
 
@@ -679,9 +679,9 @@ class ImportCSV(QtCore.QObject):
             if dbdoc is None:
                 return
             io_filters = tables.Filters(complevel=9, complib='lzo')
-            dataset_name = "imported_{0}".format(kind)
+            dataset_name = u"imported_{0}".format(kind)
             atitle = \
-                'Source CSV file {0}'.format(os.path.basename(filepath))
+                u'Source CSV file {0}'.format(os.path.basename(filepath))
             dataset = dbdoc.h5file.createEArray('/', dataset_name, atom, 
                 array_shape, title=atitle, filters=io_filters, 
                 expectedrows=nrows)
@@ -737,9 +737,9 @@ class ImportCSV(QtCore.QObject):
             if dbdoc is None:
                 return
             io_filters = tables.Filters(complevel=9, complib='lzo')
-            dataset_name = "imported_{0}".format(kind)
+            dataset_name = u"imported_{0}".format(kind)
             atitle = \
-                'Source CSV file {0}'.format(os.path.basename(filepath))
+                u'Source CSV file {0}'.format(os.path.basename(filepath))
             dataset = dbdoc.h5file.createCArray('/', dataset_name, atom, 
                 array_shape, title=atitle, filters=io_filters)
 
@@ -796,9 +796,9 @@ class ImportCSV(QtCore.QObject):
             dbdoc = self.createDestFile(filepath)
             if dbdoc is None:
                 return
-            array_name = "imported_{0}".format(kind)
+            array_name = u"imported_{0}".format(kind)
             title = \
-                'Imported from CSV file {0}'.format(os.path.basename(filepath))
+                u'Imported from CSV file {0}'.format(os.path.basename(filepath))
             dbdoc.h5file.createArray('/', array_name, data, title=title)
             dbdoc.h5file.flush()
             self.updateTree(dbdoc.filepath)
