@@ -171,10 +171,10 @@ class Preferences(QtGui.QDialog, Ui_SettingsDialog):
         self.sampleTE.setCurrentFont(self.initial_prefs['Logger/Font'])
         self.sampleTE.setTextColor(self.initial_prefs['Logger/Text'])
         self.sampleTE.moveCursor(QtGui.QTextCursor.End)  # Unselect text
-        self.sampleTE.setStyleSheet("background-color: {0}".
+        self.sampleTE.setStyleSheet(u"background-color: {0}".
             format(self.initial_prefs['Logger/Paper'].name()))
 
-        self.workspaceLabel.setStyleSheet('background-color: {0}'.
+        self.workspaceLabel.setStyleSheet(u'background-color: {0}'.
             format(self.initial_prefs['Workspace/Background'].color().name()))
 
         index = self.stylesCB.findText(\
@@ -463,7 +463,7 @@ class Preferences(QtGui.QDialog, Ui_SettingsDialog):
             item = enabled_model.item(row)
             name = item.text()
             folder = item.data()
-            self.enabled_plugins.append('{0}#@#{1}'.format(folder, name))
+            self.enabled_plugins.append(u'{0}#@#{1}'.format(folder, name))
 
 
     @QtCore.pyqtSlot(name="on_unloadButton_clicked")
@@ -484,7 +484,7 @@ class Preferences(QtGui.QDialog, Ui_SettingsDialog):
             item = enabled_model.item(row)
             name = item.text()
             folder = item.data()
-            self.enabled_plugins.append('{0}#@#{1}'.format(folder, name))
+            self.enabled_plugins.append(u'{0}#@#{1}'.format(folder, name))
 
 
     def updateButton(self, selected, deselected):
