@@ -146,10 +146,10 @@ class DataSheet(QtGui.QMdiSubWindow):
         info = nodeInfo.NodeInfo(node)
         if node.node_kind == 'table':
             col = info.columns_names[column]
-            title = '{0}: {1}[{2}]'.format(node.name, col, 
+            title = u'{0}: {1}[{2}]'.format(node.name, col, 
                 tmodel.rbuffer.start + row + 1)
         else:
-            title = '{0}: ({1},{2})'.format(node.name, 
+            title = u'{0}: ({1},{2})'.format(node.name, 
                 tmodel.rbuffer.start + row + 1, column + 1)
 
         zoomCell.ZoomCell(data, title, self.vtgui.workspace, 
